--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "bootstrap": "^5.2.0",
     "react-bootstrap": "^2.5.0",
     "react-router-dom": "^6.3.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
