--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1217.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "mdbreact": "^5.1.0",
@@ -13,6 +14,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
