--- a/backend/servidor_node/package.json
+++ b/backend/servidor_node/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.2",
     "dynamodb": "^1.3.0",
     "express": "^4.18.1",
+    "localtunnel": "^2.0.2",
     "nodemon": "^2.0.19"
   }
 }
