--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "aws-s3": "^2.0.5",
     "bootstrap": "^5.2.0",
     "react-bootstrap": "^2.5.0",
     "react-router-dom": "^6.3.0"
